# pixie

./: .arclint  .bazelrc  .gitattributes  .gitignore  MODULE.bazel  Makefile  WORKSPACE  docker.properties  go.mod  go.sum  go_deps.bzl
.devcontainer/: devcontainer.json
.github/workflows/: build_and_test.yaml  mirror_demos.yaml  sync_fork.yml
bazel/: cc_resource.bzl  container_images.bzl  go_container.bzl  grpc_web.bzl  linux_headers.bzl  pl_bpf_preprocess.bzl  pl_build_system.bzl  pl_qemu_kernels.bzl  pl_workspace.bzl  repositories.bzl  repository_locations.bzl  thrift.bzl
bazel/cc_toolchains/: cc_toolchain_ext.bzl  clang.bzl  gcc.bzl  local_clang.bzl  toolchains.bzl  unix_cc_toolchain_config.patch
bazel/cc_toolchains/clang/: toolchain.BUILD  toolchain_files.BUILD
bazel/cc_toolchains/local_clang/: BUILD.bazel  toolchain.BUILD
bazel/cc_toolchains/sysroots/: images.bzl  sysroots.bzl
bazel/test_runners/qemu_with_kernel/: init
ci/: bes.bazelrc
demos/sock-shop/: sock-shop.yaml
k8s/cloud/base/: proxy_nginx_config.yaml
k8s/finagle_tls/: finagle_server_deployment.yaml  finagle_service.yaml
k8s/operator/: kustomization.yaml
k8s/operator/helm/: Chart.yaml
k8s/operator/helm/templates/: 00_olm.yaml
k8s/vizier/base/: query_broker_deployment.yaml
k8s/vizier/pem/base/: pem_daemonset.yaml
k8s/vizier_deps/base/nats/: nats_statefulset.yaml
pxl_scripts/: bundle.json
scripts/: collect_heap_pprofs.sh  create_gke_cluster.sh  download_heap_prof_mapped_files.sh
scripts/regclient/: deps.lua
skaffold/: skaffold_vizier.yaml
src/api/go/pxapi/: results.go
src/api/python/: requirements.bazel.txt
src/carnot/: BUILD.bazel  carnot.cc  carnot_executable.cc  engine_state.h
src/carnot/dag/: dag.cc
src/carnot/exec/: BUILD.bazel  clickhouse_source_node.cc  clickhouse_source_node.h  clickhouse_source_node_test.cc  exec_graph.cc  exec_graph.h  exec_node.h  explode_node.cc  explode_node.h  explode_node_test.cc  expression_evaluator.h  filter_node.cc  filter_node.h  filter_node_test.cc  otel_export_sink_node.cc  otel_export_sink_node.h  otel_export_sink_node_test.cc
src/carnot/exec/ml/: BUILD.bazel
src/carnot/funcs/builtins/: BUILD.bazel  builtins.cc  collections.h  conditionals.h  json_ops.h  math_ops.cc  math_ops.h  pii_ops.h  (+9 more)
src/carnot/goplanner/: logical_planner.go
src/carnot/plan/: operators.cc  operators.h  plan_fragment.cc  plan_fragment.h
src/carnot/planner/: BUILD.bazel  cgo_export.cc  cgo_export.h  logical_planner.cc  logical_planner_test.cc  test_utils.h
src/carnot/planpb/: plan.proto  test_proto.h
src/carnot/udf/: registry.h  test_utils.h
src/carnot/udf_exporter/: udf_exporter.cc
src/common/base/: BUILD.bazel  base2_exponential_histogram_indexer.cc  base2_exponential_histogram_indexer.h  base2_exponential_histogram_indexer_test.cc  byte_utils.h  byte_utils_test.cc  die_tree.cc  die_tree.h  die_tree_test.cc  rescaling_base2_exponential_histogram_indexer.cc  rescaling_base2_exponential_histogram_indexer.h  rescaling_base2_exponential_histogram_indexer_test.cc
src/common/event/: BUILD.bazel  libuv.cc  libuv.h  nats.cc  nats.h
src/common/system/: proc_parser.cc  scoped_namespace.cc
src/common/zlib/: zlib_wrapper.cc  zlib_wrapper_test.cc
src/experimental/authz/: compute_authz_mapping.py  compute_authz_mapping_test.py  initial_service_count.txt  requirements.txt
src/experimental/standalone_pem/: standalone_pem_manager.cc  vizier_server.h
src/operator/controllers/: monitor.go  vizier_controller.go
src/pixie_cli/adhoc/: BUILD.bazel  adhoc.go
src/pxl_scripts/: watch.sh
src/shared/metadata/: cgroup_path_resolver.cc  cgroup_path_resolver.h  k8s_objects.h
src/shared/pprof/: BUILD.bazel  pprof.cc  pprof.h  pprof_test.cc
src/shared/types/: arrow_adapter.h
src/stirling/: BUILD.bazel  stirling.cc  stirling.h
src/stirling/binaries/: BUILD.bazel  go_func_dwarf_dump.cc  go_offset_parsing.cc
src/stirling/bpf_tools/: bcc_wrapper.cc  bcc_wrapper.h  bpftrace_wrapper.cc  bpftrace_wrapper_bpf_test.cc
src/stirling/common/: BUILD.bazel  utils.h
src/stirling/core/: BUILD.bazel
src/stirling/obj_tools/: BUILD.bazel  abi_model.cc  abi_model.h  address_converter.cc  address_converter_exe.cc  address_converter_test.cc  dwarf_reader.cc  dwarf_reader_test.cc  dwarf_utils.h  elf_reader.cc  elf_reader.h  elf_reader_test.cc  go_syms.cc  go_syms.h  go_syms_test.cc  raw_fptr_manager.cc  raw_fptr_manager.h  raw_fptr_manager_test.cc
src/stirling/obj_tools/testdata/containers/: BUILD.bazel  address_converter_container.h  address_converter_exe.cc  test_container.h  vaddr_convert_self_func.cc  vaddr_convert_self_func_container.h
src/stirling/private/demo_apps/cpp_openssl/: BUILD.bazel  README.md
src/stirling/private/demo_apps/cpp_openssl/client/: BUILD.bazel  client.cc
src/stirling/private/demo_apps/cpp_openssl/server/: BUILD.bazel  README.md  server.cc
src/stirling/scripts/: stirling_wrapper.sh
src/stirling/source_connectors/socket_tracer/testing/containers/locust/: BUILD.bazel  Dockerfile  locustfile.py  requirements.bazel.txt  requirements.txt
src/stirling/source_connectors/socket_tracer/testing/containers/nodejs/: BUILD.bazel
src/stirling/source_connectors/socket_tracer/testing/containers/py_asyncio/: BUILD.bazel  Dockerfile  blocking_server.py  main.py
src/stirling/utils/: binary_decoder.h  stat_counter.h  stat_counter_test.cc  utils.h
src/table_store/schema/: row_batch.cc  row_batch.h
src/table_store/table/: table.cc  table.h
src/ui/: package.json
tools/chef/: CHANGES_SUMMARY.md  OPTIMIZATION_README.md  base_image_version.txt  node_workstation_optimized.json
tools/docker/: Makefile
tools/docker/clang_deb_image/: Dockerfile  build_llvm.sh  create_no_dep_clang.sh  create_packages.sh
trigger_slp_error/: .gitignore  Dockerfile  Makefile  README.md
trigger_slp_error/bash/: long-request.bash  long-server.bash  short-request.bash
trigger_slp_error/kube/: long-request-manifest.yaml  long-server-manifest.yaml  short-request-manifest.yaml
trigger_slp_error/src/: go.mod  tiny_sleep_server.go
workaround/: BUILD.bazel
(+292 files in other folders)
