module(
    name = "px",
    version = "0.1.0",
    compatibility_level = 1,
    repo_name = "px",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "with_cfg.bzl", version = "0.11.0")
bazel_dep(name = "rules_apple", version = "4.1.2", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "protobuf", version = "31.1", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.74.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "boringssl", repo_name = "boringssl", version = "0.20250818.0")
bazel_dep(name = "rules_scala", version = "7.0.0")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "re2", version = "2024-07-02", repo_name = "com_googlesource_code_re2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)
use_repo(python, "python_3_12")


scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = "2.13.16")

# See the `scala/extensions/deps.bzl` docstring for a high level description of
# the tag classes exported by this module extension.
scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)

# Defines a default toolchain repo for the configured Scala version that loads
# Maven deps like the Scala compiler and standard libs. Enable and configure
# other builtin toolchains by instantiating their corresponding tag classes.
# See the documentation in `scala/extensions/deps.bzl` for all builtin
# toolchain configuration options.
#
# On production projects, you may consider defining a custom toolchain to use
# your project's required dependencies instead. In that case, you can omit using
# the module extension and this next line altogether. Or, you can still use the
# module extension to instantiate other optional `rules_scala` toolchains
# without it.
scala_deps.scala()
