java_import(
    name = "io_netty_netty_tcnative_boringssl_static_osx_x86_64",
    jars = ["@netty_tcnative_boringssl_static_osx_x86_64//jar"],
    tags = ["maven_coordinates=io.netty:netty-tcnative-boringssl-static:jar:osx-x86_64:2.0.51.Final"],
)

# java_import(
#     name = "io_netty_netty_tcnative_boringssl_static_osx_aarch_64",
#     jars = ["@maven//:v1/https/..."],
#     tags = ["maven_coordinates=io.netty:netty-tcnative-boringssl-static:jar:osx-aarch_64:2.0.51.Final"],
# )

# java_import(
#     name = "io_netty_netty_tcnative_boringssl_static_linux_x86_64",
#     jars = ["@maven//:v1/https/..."],
#     tags = ["maven_coordinates=io.netty:netty-tcnative-boringssl-static:jar:linux-x86_64:2.0.51.Final"],
# )

# java_import(
#     name = "io_netty_netty_tcnative_boringssl_static_linux_aarch_64",
#     jars = ["@maven//:v1/https/..."],
#     tags = ["maven_coordinates=io.netty:netty-tcnative-boringssl-static:jar:linux-aarch_64:2.0.51.Final"],
# )

# java_import(
#     name = "io_netty_netty_tcnative_boringssl_static_windows_x86_64",
#     jars = ["@maven//:v1/https/..."],
#     tags = ["maven_coordinates=io.netty:netty-tcnative-boringssl-static:jar:windows-x86_64:2.0.51.Final"],
# )

# java_import(
#     name = "io_netty_netty_tcnative_boringssl_static",
#     jars = ["@maven//:v1/https/..."],
#     tags = [
#         "maven_coordinates=io.netty:netty-tcnative-boringssl-static:2.0.51.Final",
#         "maven_url=...",
#     ],
#     deps = [
#         "//workaround:io_netty_netty_tcnative_boringssl_static_linux_aarch_64",
#         "//workaround:io_netty_netty_tcnative_boringssl_static_linux_x86_64",
#         "//workaround:io_netty_netty_tcnative_boringssl_static_osx_aarch_64",
#         "//workaround:io_netty_netty_tcnative_boringssl_static_osx_x86_64",
#         "//workaround:io_netty_netty_tcnative_boringssl_static_windows_x86_64",
#         "@maven//:io_netty_netty_tcnative_classes",
#     ],
# )
