java_import(
    name = "io_netty_netty_tcnative_boringssl_static_osx_x86_64",
    jars = ["@netty_tcnative_boringssl_static_osx_x86_64//jar:downloaded.jar"],
    tags = ["maven_coordinates=io.netty:netty-tcnative-boringssl-static:jar:osx-x86_64:2.0.53.Final"],
    visibility = ["//visibility:public"],
)

java_import(
    name = "io_netty_netty_tcnative_boringssl_static_osx_aarch_64",
    jars = ["@netty_tcnative_boringssl_static_osx_aarch_64//jar:downloaded.jar"],
    tags = ["maven_coordinates=io.netty:netty-tcnative-boringssl-static:jar:osx-aarch_64:2.0.53.Final"],
    visibility = ["//visibility:public"],
)

java_import(
    name = "io_netty_netty_tcnative_boringssl_static_linux_x86_64",
    jars = ["@netty_tcnative_boringssl_static_linux_x86_64//jar:downloaded.jar"],
    tags = ["maven_coordinates=io.netty:netty-tcnative-boringssl-static:jar:linux-x86_64:2.0.53.Final"],
    visibility = ["//visibility:public"],
)

java_import(
    name = "io_netty_netty_tcnative_boringssl_static_linux_aarch_64",
    jars = ["@netty_tcnative_boringssl_static_linux_aarch_64//jar:downloaded.jar"],
    tags = ["maven_coordinates=io.netty:netty-tcnative-boringssl-static:jar:linux-aarch_64:2.0.53.Final"],
    visibility = ["//visibility:public"],
)

java_import(
    name = "io_netty_netty_tcnative_boringssl_static_windows_x86_64",
    jars = ["@netty_tcnative_boringssl_static_windows_x86_64//jar:downloaded.jar"],
    tags = ["maven_coordinates=io.netty:netty-tcnative-boringssl-static:jar:windows-x86_64:2.0.53.Final"],
    visibility = ["//visibility:public"],
)

java_import(
    name = "io_netty_netty_tcnative_classes",
    jars = [
        "@netty_tcnative_classes//jar:downloaded.jar",
    ],
    tags = [
        "maven_coordinates=io.netty:netty-tcnative-classes:2.0.53.Final",
        "maven_url=https://repo1.maven.org/maven2/io/netty/netty-tcnative-classes/2.0.53.Final/netty-tcnative-classes-2.0.53.Final.jar",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//workaround:io_netty_netty_tcnative_boringssl_static_linux_aarch_64",
        "//workaround:io_netty_netty_tcnative_boringssl_static_linux_x86_64",
        "//workaround:io_netty_netty_tcnative_boringssl_static_osx_aarch_64",
        "//workaround:io_netty_netty_tcnative_boringssl_static_osx_x86_64",
        "//workaround:io_netty_netty_tcnative_boringssl_static_windows_x86_64",
        # "@maven//:io_netty_netty_tcnative_classes",
    ],
)

java_import(
    name = "io_netty_netty_tcnative_boringssl_static",
    jars = [
        "@netty_tcnative_boringssl_static//jar:downloaded.jar",
    ],
    tags = [
        "maven_coordinates=io.netty:netty-tcnative-boringssl-static:2.0.53.Final",
        "maven_url=https://repo1.maven.org/maven2/io/netty/netty-tcnative-boringssl-static/2.0.53.Final/netty-tcnative-boringssl-static-2.0.53.Final.jar",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//workaround:io_netty_netty_tcnative_classes",
        "//workaround:io_netty_netty_tcnative_boringssl_static_linux_aarch_64",
        "//workaround:io_netty_netty_tcnative_boringssl_static_linux_x86_64",
        "//workaround:io_netty_netty_tcnative_boringssl_static_osx_aarch_64",
        "//workaround:io_netty_netty_tcnative_boringssl_static_osx_x86_64",
        "//workaround:io_netty_netty_tcnative_boringssl_static_windows_x86_64",
        # "@maven//:io_netty_netty_tcnative_classes",
    ],
)
