# Copyright © 2018- Pixie Labs Inc.
# Copyright © 2020- New Relic, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of New Relic Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Pixie Labs Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# New Relic, Inc.
#
# SPDX-License-Identifier: Proprietary

load("//bazel:pl_build_system.bzl", "pl_cc_binary")

pl_cc_binary(
    name = "client",
    srcs = ["client.cc"],
    deps = select({
        "//src/stirling/private/demo_apps/cpp_openssl:boringssl": ["@boringssl//:ssl"],
        "//src/stirling/private/demo_apps/cpp_openssl:openssl": ["//third_party:openssl"],
        "//conditions:default": ["@boringssl//:ssl"],
    }),
)
