# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@py_asyncio_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//src/stirling:__subpackages__"])

genrule(
    name = "certs",
    outs = [
        "ca.crt",
        "client.crt",
        "client.key",
        "server.crt",
        "server.key",
    ],
    cmd = """
        $(location //src/common/testing/test_utils/cert_generator:cert_generator) \
        --ca_crt $(location ca.crt) \
        --client_crt $(location client.crt) \
        --client_key $(location client.key) \
        --server_crt $(location server.crt) \
        --server_key $(location server.key) \
        --secret_key_type pkcs8
    """,
    tools = [
        "//src/common/testing/test_utils/cert_generator",
    ],
)

pkg_tar(
    name = "ssl_keys",
    srcs = [
        "ca.crt",
        "client.crt",
        "client.key",
        "server.crt",
        "server.key",
    ],
    mode = "0755",
    package_dir = "/etc/ssl",
    strip_prefix = "/src/stirling/source_connectors/socket_tracer/testing/containers/nodejs",
)

container_image(
    name = "@node_12_3_1_image_custom_http_server",
    base = "@node_12_3_1_linux_amd64_image//image",
    tars = [":ssl_keys"],
    files = glob(["*.js"]),
    cmd = ["node", "/server.js"],
)

container_image(
    name = "node_14_18_1_alpine_image_custom_http_server",
    base = "@node_14_18_1_alpine_amd64_image//image",
    tars = [":ssl_keys"],
    files = glob(["*.js"]),
    cmd = ["node", "/server.js"],
)
